--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -26,21 +26,10 @@
     },
     "colab": {
       "name": "BarcelonaCourse.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/andreaaraldo/mining-low-dim-network-data/blob/master/BarcelonaCourse.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -107,8 +96,11 @@
       "metadata": {
         "id": "qsZbuB6vIhdb",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3459a2d3-397c-49e7-9c61-3534d5f5c793"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "07ed3bec-83c6-4d96-913f-faad47db69e0"
       },
       "source": [
         "%matplotlib inline\n",
@@ -127,7 +119,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,8 +135,11 @@
       "metadata": {
         "id": "ndQ1pvuTIhdo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e936575e-0393-48b6-dfb9-57340bd75f17"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "baae9257-64ce-4914-8df2-92ef11f38e07"
       },
       "source": [
         "%%html\n",
@@ -154,7 +149,7 @@
         "}\n",
         "</style>"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -164,7 +159,7 @@
               " .container.slides .celltoolbar, .container.slides .hide-in-slideshow {\n",
               "    display: None ! important;\n",
               "}\n",
-              "</style>\n"
+              "</style>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -643,6 +638,80 @@
         "<img src='https://github.com/andreaaraldo/mining-low-dim-network-data/blob/master/images/Abilene-map.png?raw=1'>\n",
         "\n",
         "Source: Internet2, circa 2005"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qWzv7qCNMDJd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 482
+        },
+        "outputId": "c356eea4-7dc6-47b7-fba6-24cb691ab750"
+      },
+      "source": [
+        "! wget -r --no-parent https://github.com/andreaaraldo/mining-low-dim-network-data/tree/master/data"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2020-04-24 17:20:42--  https://github.com/andreaaraldo/mining-low-dim-network-data/tree/master/data\n",
+            "Resolving github.com (github.com)... 140.82.118.3\n",
+            "Connecting to github.com (github.com)|140.82.118.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘github.com/andreaaraldo/mining-low-dim-network-data/tree/master/data’\n",
+            "\n",
+            "\r          github.co     [<=>                 ]       0  --.-KB/s               \rgithub.com/andreaar     [ <=>                ]  60.99K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2020-04-24 17:20:42 (5.92 MB/s) - ‘github.com/andreaaraldo/mining-low-dim-network-data/tree/master/data’ saved [62451]\n",
+            "\n",
+            "Loading robots.txt; please ignore errors.\n",
+            "--2020-04-24 17:20:42--  https://github.com/robots.txt\n",
+            "Reusing existing connection to github.com:443.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 31710 (31K) [text/plain]\n",
+            "Saving to: ‘github.com/robots.txt’\n",
+            "\n",
+            "\rgithub.com/robots.t   0%[                    ]       0  --.-KB/s               \rgithub.com/robots.t 100%[===================>]  30.97K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2020-04-24 17:20:42 (140 MB/s) - ‘github.com/robots.txt’ saved [31710/31710]\n",
+            "\n",
+            "FINISHED --2020-04-24 17:20:42--\n",
+            "Total wall clock time: 0.4s\n",
+            "Downloaded: 2 files, 92K in 0.01s (8.74 MB/s)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HwXkgRlgNMcQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "2980ad0a-4622-49b5-981d-2309f4cec4b7"
+      },
+      "source": [
+        "! ls"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "github.com  sample_data\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
