--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -37,6 +37,8 @@
         "colab_type": "text"
       },
       "source": [
+        "This notebook has been forked from the repository of Prof. Marc Crovella, Boston University.\n",
+        "\n",
         "<BR>\n",
         "<BR>\n",
         "<center>\n",
