--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -26,10 +26,21 @@
     },
     "colab": {
       "name": "BarcelonaCourse.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/andreaaraldo/mining-low-dim-network-data/blob/master/BarcelonaCourse.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -98,11 +109,11 @@
       "metadata": {
         "id": "qsZbuB6vIhdb",
         "colab_type": "code",
+        "outputId": "07ed3bec-83c6-4d96-913f-faad47db69e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "07ed3bec-83c6-4d96-913f-faad47db69e0"
+        }
       },
       "source": [
         "%matplotlib inline\n",
@@ -121,7 +132,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,11 +148,11 @@
       "metadata": {
         "id": "ndQ1pvuTIhdo",
         "colab_type": "code",
+        "outputId": "baae9257-64ce-4914-8df2-92ef11f38e07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "baae9257-64ce-4914-8df2-92ef11f38e07"
+        }
       },
       "source": [
         "%%html\n",
@@ -151,7 +162,7 @@
         "}\n",
         "</style>"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -647,16 +658,16 @@
       "metadata": {
         "id": "qWzv7qCNMDJd",
         "colab_type": "code",
+        "outputId": "c356eea4-7dc6-47b7-fba6-24cb691ab750",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
-        },
-        "outputId": "c356eea4-7dc6-47b7-fba6-24cb691ab750"
+        }
       },
       "source": [
         "! wget -r --no-parent https://github.com/andreaaraldo/mining-low-dim-network-data/tree/master/data"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,16 +707,16 @@
       "metadata": {
         "id": "HwXkgRlgNMcQ",
         "colab_type": "code",
+        "outputId": "2980ad0a-4622-49b5-981d-2309f4cec4b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "2980ad0a-4622-49b5-981d-2309f4cec4b7"
+        }
       },
       "source": [
         "! ls"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,8 +732,8 @@
       "metadata": {
         "id": "Xsu_HoWEIheO",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "2917cb5b-ce80-4ac8-fad0-af2874e3417e"
+        "outputId": "2917cb5b-ce80-4ac8-fad0-af2874e3417e",
+        "colab": {}
       },
       "source": [
         "with open('data/net-traffic/AbileneFlows/odnames','r') as f:\n",
@@ -2643,8 +2654,8 @@
       "metadata": {
         "id": "PCT5T6lmIheV",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "9e94ce13-aebe-4e01-f171-cce8e084cd2b"
+        "outputId": "9e94ce13-aebe-4e01-f171-cce8e084cd2b",
+        "colab": {}
       },
       "source": [
         "u,s,vt = np.linalg.svd(Atraf)\n",
@@ -2688,8 +2699,8 @@
       "metadata": {
         "id": "Axm5oYACIhea",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6f3c9295-e529-4cef-cad5-ee9b05bb9739"
+        "outputId": "6f3c9295-e529-4cef-cad5-ee9b05bb9739",
+        "colab": {}
       },
       "source": [
         "fig = plt.figure(figsize=(9,6))\n",
@@ -2733,8 +2744,8 @@
       "metadata": {
         "id": "WBABqbpzIhef",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "49fe26b5-cda6-4853-d823-390914c7dc56"
+        "outputId": "49fe26b5-cda6-4853-d823-390914c7dc56",
+        "colab": {}
       },
       "source": [
         "fig = plt.figure(figsize=(9,6))\n",
@@ -2781,8 +2792,8 @@
       "metadata": {
         "id": "fuxI0vJoIhek",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5478351a-c2fd-467b-dba4-e6c6729f39a6"
+        "outputId": "5478351a-c2fd-467b-dba4-e6c6729f39a6",
+        "colab": {}
       },
       "source": [
         "s[0:10]/Anorm"
@@ -2945,8 +2956,8 @@
       "metadata": {
         "id": "wCT2TV9UIhev",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "61a42594-6014-4329-adf5-c9206fc6574e"
+        "outputId": "61a42594-6014-4329-adf5-c9206fc6574e",
+        "colab": {}
       },
       "source": [
         "boat = np.loadtxt('data/images/boat/boat.dat')\n",
@@ -2998,8 +3009,8 @@
       "metadata": {
         "id": "8BSD2ebFIhe2",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "00596634-ff7e-439e-991e-48e15ba7c61f"
+        "outputId": "00596634-ff7e-439e-991e-48e15ba7c61f",
+        "colab": {}
       },
       "source": [
         "u,s,vt=np.linalg.svd(boat,full_matrices=False)\n",
@@ -3056,8 +3067,8 @@
       "metadata": {
         "id": "WdQ6_Y2xIhe7",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "87e7c654-0b78-40b7-e707-7c3a3c6dba60"
+        "outputId": "87e7c654-0b78-40b7-e707-7c3a3c6dba60",
+        "colab": {}
       },
       "source": [
         "# construct a rank-40 version of the boat\n",
@@ -3173,8 +3184,8 @@
       "metadata": {
         "id": "9KXhB4_lIhfI",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1dfbf21f-1601-4afa-b633-6384ee4e3018"
+        "outputId": "1dfbf21f-1601-4afa-b633-6384ee4e3018",
+        "colab": {}
       },
       "source": [
         "u,s,vt = np.linalg.svd(Atraf,full_matrices=False)\n",
@@ -3220,8 +3231,8 @@
       "metadata": {
         "id": "3kEO9HnXIhfP",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1d53d4b3-92ec-4fb8-ab50-d4554dd86d0c"
+        "outputId": "1d53d4b3-92ec-4fb8-ab50-d4554dd86d0c",
+        "colab": {}
       },
       "source": [
         "uframe[2].plot()\n",
@@ -3490,8 +3501,8 @@
       "metadata": {
         "id": "8XikEluBIhfe",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f94aaf60-ad11-4848-d394-0b577aac742b"
+        "outputId": "f94aaf60-ad11-4848-d394-0b577aac742b",
+        "colab": {}
       },
       "source": [
         "u,s,vt = np.linalg.svd(Atraf,full_matrices=False)\n",
@@ -3551,8 +3562,8 @@
       "metadata": {
         "id": "ROhwtSYNIhfk",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "dcc75abf-6234-4c1b-941e-7249fa1269f9"
+        "outputId": "dcc75abf-6234-4c1b-941e-7249fa1269f9",
+        "colab": {}
       },
       "source": [
         "unorm = u[:,0:6]\n",
@@ -3612,8 +3623,8 @@
       "metadata": {
         "id": "vYGM1gZTIhfn",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f3777745-be5d-48f5-fda4-bccfbcf776fe"
+        "outputId": "f3777745-be5d-48f5-fda4-bccfbcf776fe",
+        "colab": {}
       },
       "source": [
         "# choose the top 15 anomalies\n",
@@ -3694,8 +3705,8 @@
       "metadata": {
         "id": "pEgaWVPiIhft",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5fd341b8-692b-4f2b-8b03-613c763e2b6f"
+        "outputId": "5fd341b8-692b-4f2b-8b03-613c763e2b6f",
+        "colab": {}
       },
       "source": [
         "data = np.loadtxt('data/social/data/spatial_data.txt')\n",
@@ -3753,8 +3764,8 @@
       "metadata": {
         "id": "7vKOc4hqIhfx",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "8bb2719d-b6b0-411d-a4a0-fda7f577b62e"
+        "outputId": "8bb2719d-b6b0-411d-a4a0-fda7f577b62e",
+        "colab": {}
       },
       "source": [
         "u,s,vt = np.linalg.svd(FBSpatial,full_matrices=False)\n",
@@ -3813,8 +3824,8 @@
       "metadata": {
         "id": "zB3pl7XMIhf0",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "11bf3cbf-cc47-4120-dc97-4072858bc665"
+        "outputId": "11bf3cbf-cc47-4120-dc97-4072858bc665",
+        "colab": {}
       },
       "source": [
         "unorm = u[:,0:25]\n",
@@ -3877,8 +3888,8 @@
       "metadata": {
         "id": "djpZ1njtIhf3",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "286d73d7-0e22-4c17-dbd7-f349e12a79b8"
+        "outputId": "286d73d7-0e22-4c17-dbd7-f349e12a79b8",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(9,6))\n",
@@ -3937,8 +3948,8 @@
       "metadata": {
         "id": "k-A_uPiGIhf6",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e3675ccf-326d-4c86-84c1-aa17a3d12295"
+        "outputId": "e3675ccf-326d-4c86-84c1-aa17a3d12295",
+        "colab": {}
       },
       "source": [
         "# choose non-anomalous users\n",
@@ -4023,8 +4034,8 @@
       "metadata": {
         "id": "Qqx7xvHzIhgA",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "86dbef79-bc8e-4092-a408-92f19d0e3d2b"
+        "outputId": "86dbef79-bc8e-4092-a408-92f19d0e3d2b",
+        "colab": {}
       },
       "source": [
         "data = np.loadtxt('data/social/data/temporal_data.txt')\n",
@@ -4081,8 +4092,8 @@
       "metadata": {
         "id": "z0jx0xN8IhgE",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "50c4a771-d160-477b-a19d-16a502fc89b4"
+        "outputId": "50c4a771-d160-477b-a19d-16a502fc89b4",
+        "colab": {}
       },
       "source": [
         "# choose the top 25 columns of U for the normal space\n",
@@ -4144,8 +4155,8 @@
       "metadata": {
         "id": "1NbQWb9WIhgH",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a4aa2d94-1870-4c5e-e238-9acb3adbaebb"
+        "outputId": "a4aa2d94-1870-4c5e-e238-9acb3adbaebb",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(9,6))\n",
@@ -4194,8 +4205,8 @@
       "metadata": {
         "id": "hWeEnq1xIhgJ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0b52a9dd-72de-421d-8cf2-2e5ec0713ee2"
+        "outputId": "0b52a9dd-72de-421d-8cf2-2e5ec0713ee2",
+        "colab": {}
       },
       "source": [
         "# choose non-anomalous users\n",
@@ -4411,8 +4422,8 @@
       "metadata": {
         "id": "fQN04yrHIhgU",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "cadf9881-9201-44c6-f8f7-a4032a8d68f1"
+        "outputId": "cadf9881-9201-44c6-f8f7-a4032a8d68f1",
+        "colab": {}
       },
       "source": [
         "A = Atraf.values\n",
@@ -4451,8 +4462,8 @@
       "metadata": {
         "id": "9ye3rK_eIhgX",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e0c470e8-3ce6-4c7f-f500-9d75ef0fe15d"
+        "outputId": "e0c470e8-3ce6-4c7f-f500-9d75ef0fe15d",
+        "colab": {}
       },
       "source": [
         "plt.plot(testvals,avgrms,'-')\n",
@@ -4519,8 +4530,8 @@
       "metadata": {
         "id": "HSmwq156Ihgd",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "c2708f02-e723-4e9f-ccca-e2e32eb08328"
+        "outputId": "c2708f02-e723-4e9f-ccca-e2e32eb08328",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(12,8))\n",
@@ -4601,8 +4612,8 @@
       "metadata": {
         "id": "vM2ddDIcIhgj",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "8811fad2-e55f-4179-c78d-f6922a270433"
+        "outputId": "8811fad2-e55f-4179-c78d-f6922a270433",
+        "colab": {}
       },
       "source": [
         "plt.figure(figsize=(12,6))\n",
