Some explanations added

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -132,7 +132,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "}\n",
         "</style>"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -558,6 +558,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "c7RUp7seqyPA",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: By computing this multiplication term by term, you can observe that, for instance, $\\mathbf{a}_1 = \\sum_{j=1}^k v_{j1} \\cdot \\mathbf{u}_j$. This is why $V$ is the matrix of coefficients."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "RRiwkp4pIheK",
         "colab_type": "text"
       },
@@ -618,6 +628,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "EkqBlcIKr11X",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: \n",
+        "\n",
+        "**Theorem**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7fMLfhDeIheM",
         "colab_type": "text"
       },
@@ -660,6 +682,7 @@
         "colab_type": "text"
       },
       "source": [
+        "*Araldo*: \n",
         "We now donwload the data from the repository of Marc Crovella. The commands are inspired by [this post](https://github.community/t5/How-to-use-Git-and-GitHub/How-can-I-download-a-specific-folder-from-a-GitHub-repo/m-p/95/highlight/true#M23)."
       ]
     },
@@ -682,7 +705,7 @@
         "! echo \"data\" > .git/info/sparse-checkout\n",
         "! git pull origin master"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +740,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1779,6 +1802,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qyPx8X1QsbNj",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*:  The function `np.linalg.svd(..)` performs Singular Value Decomposition."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PCT5T6lmIheV",
@@ -1798,7 +1831,7 @@
         "plt.title(r'Singular Values of $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1827,6 +1860,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VxMNTBLhtNor",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: We now just plot the first 20 singular values, normalized by the norm of $A$."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Axm5oYACIhea",
@@ -1846,7 +1889,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1875,6 +1918,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x6W6REdFuO78",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: To obtain the error of rank-$k$ approximation, we apply claim 1 of the previous theorem."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WBABqbpzIhef",
@@ -1897,7 +1950,7 @@
         "plt.title(r'Relative Error of rank-$k$ approximation to $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1939,7 +1992,7 @@
       "source": [
         "s[0:10]/Anorm"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2110,7 +2163,7 @@
         "plt.imshow(boat,cmap = cm.Greys_r)\n",
         "print('')"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2164,7 +2217,7 @@
         "plt.figure()\n",
         "plt.plot(s)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2236,7 +2289,7 @@
         "plt.subplots_adjust(wspace=0.5)\n",
         "print('')"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2346,7 +2399,7 @@
         "uframe[0].plot()\n",
         "uframe[1].plot()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2394,7 +2447,7 @@
         "uframe[2].plot()\n",
         "uframe[3].plot()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2673,7 +2726,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('First Nine Columns of $U$',size=20)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2737,7 +2790,7 @@
         "plt.xlabel('Time')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2800,7 +2853,7 @@
         "plt.plot(anomalies,Anorm[anomalies],'ro')\n",
         "plt.title('Top 15 Anomalies')"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2884,7 +2937,7 @@
         "plt.title('Number of Likes Per User')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2943,7 +2996,7 @@
         "plt.plot(s/np.linalg.norm(FBSpatial))\n",
         "plt.title('Singular Values of Spatial Like Matrix')"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3014,7 +3067,7 @@
         "plt.plot(anomSet,FBSnorm[anomSet],'ro')\n",
         "plt.title('Top 30 Anomalous Users')"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3077,7 +3130,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3144,7 +3197,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3227,7 +3280,7 @@
         "u,s,vt = np.linalg.svd(FBTemporal,full_matrices=False)\n",
         "plt.plot(s/np.linalg.norm(FBTemporal))"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3293,7 +3346,7 @@
         "plt.plot(FBTnorm)\n",
         "plt.plot(anomSet,FBTnorm[anomSet],'ro')"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3356,7 +3409,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3413,7 +3466,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3638,7 +3691,7 @@
         "        rmsvals.append(np.linalg.norm(A[Unknown]-Est[Unknown])/np.linalg.norm(A[Unknown]))\n",
         "    avgrms.append(np.mean(np.array(rmsvals)))"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3670,7 +3723,7 @@
         "plt.ylabel('Relative Error')\n",
         "plt.ylim(ymin=0);"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3744,7 +3797,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example OD Flows Estimated Using 5% Data',size=20)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3832,7 +3885,7 @@
         "plt.title('Reconstructed Boat')\n",
         "plt.subplots_adjust(wspace=0.5)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
