Some deeper explanation

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "qsZbuB6vIhdb",
         "colab_type": "code",
-        "outputId": "62cae11d-d0a5-4af0-a760-ffa629760e15",
+        "outputId": "cede080c-3347-49bc-87bf-f43f062ed6b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -132,7 +132,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,10 +691,10 @@
       "metadata": {
         "id": "HwXkgRlgNMcQ",
         "colab_type": "code",
-        "outputId": "0fe38982-d1bb-46c5-e04b-da50b1a977b6",
+        "outputId": "b3528120-5265-4d80-b8ea-98dc47ec68f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 195
         }
       },
       "source": [
@@ -703,22 +703,43 @@
         "! git init\n",
         "! git remote add origin -f https://github.com/mcrovella/mining-low-dim-network-data\n",
         "! echo \"data\" > .git/info/sparse-checkout\n",
-        "! git pull origin master"
+        "! git pull origin master\n",
+        "\n",
+        "with open('data/net-traffic/AbileneFlows/odnames','r') as f:\n",
+        "    odnames = [line.strip() for line in f]\n",
+        "\n",
+        "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
+        "                      names=odnames,engine='python')"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "mkdir: cannot create directory ‘data’: File exists\n",
-            "Reinitialized existing Git repository in /content/.git/\n",
-            "fatal: remote origin already exists.\n",
+            "Initialized empty Git repository in /content/.git/\n",
+            "Updating origin\n",
+            "remote: Enumerating objects: 109, done.\u001b[K\n",
+            "remote: Total 109 (delta 0), reused 0 (delta 0), pack-reused 109\u001b[K\n",
+            "Receiving objects: 100% (109/109), 23.04 MiB | 8.43 MiB/s, done.\n",
+            "Resolving deltas: 100% (41/41), done.\n",
             "From https://github.com/mcrovella/mining-low-dim-network-data\n",
-            " * branch            master     -> FETCH_HEAD\n",
-            "Already up to date.\n"
+            " * [new branch]      master     -> origin/master\n",
+            "From https://github.com/mcrovella/mining-low-dim-network-data\n",
+            " * branch            master     -> FETCH_HEAD\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CxM9QjsM1zRw",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Araldo*: \n",
+        "We know from the description of the dataset, that each sample represents a period of 10 min and that we have 1008 periods in total. We can thus index the dataset, with the corresponding column of time-stamps. To do so, we first create the vector `dates`, and then we set it as the index of the dataframe."
       ]
     },
     {
@@ -726,21 +747,19 @@
       "metadata": {
         "id": "Xsu_HoWEIheO",
         "colab_type": "code",
-        "outputId": "87f650a5-1fb3-41ea-bb89-b92022f8a3df",
+        "outputId": "b3fa7d10-cb4a-4928-de0b-26e29e982af9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 635
         }
       },
       "source": [
-        "with open('data/net-traffic/AbileneFlows/odnames','r') as f:\n",
-        "    odnames = [line.strip() for line in f]\n",
         "dates = pd.date_range('9/1/2003',freq='10min',periods=1008)\n",
-        "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,names=odnames,engine='python')\n",
+        "\n",
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1797,7 +1816,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -1808,7 +1827,8 @@
         "colab_type": "text"
       },
       "source": [
-        "*Araldo*:  The function `np.linalg.svd(..)` performs Singular Value Decomposition."
+        "*Araldo*: \n",
+        "The function `np.linalg.svd(..)` performs Singular Value Decomposition."
       ]
     },
     {
@@ -2510,7 +2530,7 @@
         "\\times\n",
         "\\left[\\begin{array}{ccccc}\\dots&\\dots&\\vv_1&\\dots&\\dots\\\\\\dots&\\dots&\\vv_k&\\dots&\\dots\\end{array}\\right]$$\n",
         "\n",
-        "Then the rating that a user gives a move is the inner product of a $k$ element vector that corresponds to the user, and a $k$ element vector that corresponds to the movie."
+        "Then the rating that a user gives a movie is the inner product of a $k$ element vector that corresponds to the user, and a $k$ element vector that corresponds to the movie."
       ]
     },
     {
